# arduino-cmake

./: .gitignore  ArduinoToolchain.cmake  CMakeLists.txt
Platform/: Arduino-Determine-C.cmake  Arduino-Determine-CXX.cmake  Arduino.cmake  Util.cmake
Platform/Core/: BoardPropertiesReader.cmake  LibraryFinder.cmake  SourceFinder.cmake
Platform/Core/BoardFlags/: CompilerFlagsSetter_stm32.cmake  FlagsSetter.cmake
Platform/Core/Examples/: ArduinoExampleFactory.cmake  ArduinoLibraryExampleFactory.cmake
Platform/Core/Libraries/: ArduinoLibraryFactory.cmake  CoreLibraryFactory.cmake
Platform/Core/Sketch/: ArduinoSketchFactory.cmake
Platform/Core/Targets/: ArduinoFirmwareTargetCreator_stm32.cmake
Platform/Generation/: ArduinoExampleGenerator.cmake  ArduinoFirmwareGenerator.cmake  ArduinoLibraryGenerator.cmake
Platform/Initialization/: DetectVersion.cmake  FindHardwarePlatform.cmake  FindPrograms.cmake  Initializer.cmake  SetupExampleCategories.cmake
cmake/: ArduinoToolchain.cmake
cmake/Platform/: Arduino-Determine-C.cmake  Arduino-Determine-CXX.cmake  Arduino-Initialize.cmake  Arduino.cmake
